# aibom

./: BUILD-SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PYPI-READY.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  framework_request.md
aibom/: __init__.py  cli.py  scanner.py
docs/: CNAME  cicd.md  index.html
examples/gradient-boosting-project/: train.py
examples/hf-only/: example.py
examples/keras-project/: model.py
examples/mixed/: example.py
examples/openai-only/: example.py
examples/pytorch-project/: train.py
