[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aibom"
version = "0.1.0"
description = "Generate EU AI Act Annex IV compliance documentation from your ML codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
aibom = "aibom.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aibom*"]
