[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aibom-cli"
version = "0.3.0"
description = "Generate EU AI Act Annex IV compliance documentation from your ML codebase"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
aibom = "aibom.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aibom*"]
